HW5/javali_tests/not ours/new/HW3_MarLin/type_error/if_while/OkIfCondition.javali
/* Test that if conditions must be boolean */
class Main {
   void main() {
      boolean b;
      b = true;
      if (!false) {
         
      }
      if (b == false/* && b || !b && 1 >= 10*/) {
         
      }
   }
}
